<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/basic"
        android:enabled="true"
        android:icon="@drawable/calculator"
        android:title="@string/basic" />
    <item
        android:id="@+id/tip"
        android:enabled="true"
        android:icon="@drawable/tips"
        android:title="@string/tip" />
    <item
        android:id="@+id/stocks"
        android:enabled="true"
        android:icon="@drawable/stocks"
        android:title="@string/stocks" />

    <item
        android:id="@+id/bitwise"
        android:enabled="true"
        android:icon="@drawable/binary"
        android:title="@string/bitwise" />

    <item
        android:id="@+id/convert"
        android:enabled="true"
        android:icon="@drawable/measurement"
        android:title="@string/convert" />

</menu>